--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,8 +7,15 @@
 
 /* components */
 @import './components/menu';
+@import './components/card';
 @import './components/swiper';
 
+
 /* modules */
+@import './modules/title';
 @import './modules/header';
 @import './modules/humberger';
+@import './modules/button';
+
+/* util */
+@import "./utility/util";
