--- a/src/scss/components/swiper.scss
+++ b/src/scss/components/swiper.scss
@@ -2,7 +2,44 @@
 @import '~swiper/swiper-bundle.css';
 
 .swiper-container {
-  overflow: visible;
-  width: 600px;
-  height: 300px;
+  overflow: hidden;
+  width: 100%;
+}
+
+.swiper-slide{
+  position: relative;
+}
+
+.swiper-text{
+  position: absolute;
+  color: white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.swiper-footer{
+  position: absolute;
+  left: 50%;
+  bottom: 20px;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  z-index: 2;
+  height: 68px;
+  width: 22px;
+  overflow: hidden;
+}
+
+.swiper-footer__image{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 6px;
+}
+
+.swiper-footer__text{
+  transform: rotate(90deg);
+  color: white;
+  margin-left: 5px;
+  display: block;
 }
