--- a/src/scss/layout/index.scss
+++ b/src/scss/layout/index.scss
@@ -1,5 +1,14 @@
 @import '../utility/variable';
 
+body {
+  background: $black;
+}
+
+.section{
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
 .main{
   position: relative;
   min-height: 100vh;
