--- a/src/scss/modules/header.scss
+++ b/src/scss/modules/header.scss
@@ -7,7 +7,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px 10px;
-
+  background-color:$white;
+  z-index: 10;
 }
 
 .header__logo {
