--- a/src/scss/modules/humberger.scss
+++ b/src/scss/modules/humberger.scss
@@ -13,6 +13,8 @@
   display: inline-block;
   width: 30px;
   height: 3px;
+  transition: 1s linear;
+  transform-origin: left;
   background-color: $black;
 
   &:first-child {
@@ -21,5 +23,17 @@
 
   &:last-child {
     top: 30px;
+  }
+
+  .is-open &{
+    transform: rotate(45deg);
+
+    &:first-child{
+      transform: translateX(100px);
+    }
+
+    &:last-child{
+      transform: rotate(-45deg);
+    }
   }
 }
