--- a/src/scss/utility/variable.scss
+++ b/src/scss/utility/variable.scss
@@ -3,8 +3,12 @@ $fs-s: 14px;
 $fs-m: 16px;
 $fs-l: 18px;
 $fs-main:24px;
-$fs-sub:20px;
+$fs-sub:16px;
 
 /* color */
 $black: #333;
 $white: #fffffe;
+$baseBgColor:#000;
+$baseColor:#002c54;
+
+$font-family: 'Josefin Slab', serif;
