--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -5,7 +5,7 @@
   position: fixed;
   top: 0;
   right: 0;
-  padding: 100px;
+  padding: 100px 20px 100px 0;
   transition: 2s;
   transform-style: preserve-3d;
   perspective: 2000px;
