--- a/src/scss/components/swiper.scss
+++ b/src/scss/components/swiper.scss
@@ -7,17 +7,41 @@
   overflow: hidden;
   width: 100%;
 }
+@media ( min-width: 600px ) {
+  .swiper-container{
+    width: 80%;
+  }
+}
 
 .swiper-slide{
   position: relative;
 }
 
+.swiper-slide > img{
+  @media ( min-width: 600px ) {
+    height: 450px;
+  }
+  object-fit: cover;
+  height: 300px;
+}
+
 .swiper-text{
+  font-size: 14px;
+  font-weight: bold;
   color: $white;
+  text-shadow: 0 5px 3px rgba(0, 0, 0, 1);
   position: absolute;
   top: 50%;
   left: 50%;
+  opacity: 0;
+  transition: 0.5s;
+  transition-delay: 0.5s;
   transform: translate(-50%,-50%);
+
+  &.appear.down{
+    opacity: 1;
+    transform: translate(-50%, -100%);
+  }
 }
 
 .swiper-footer{
