--- a/src/scss/modules/header.scss
+++ b/src/scss/modules/header.scss
@@ -8,11 +8,12 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px 10px;
-  background-color: $white;
+  background-color: $baseBgColor;
 }
 
 .header__logo {
   font-size: 32px;
+  color: $white;
   display: flex;
   align-items: center;
 
