remove menu from pc layout

--- a/src/scss/modules/humberger.scss
+++ b/src/scss/modules/humberger.scss
@@ -1,6 +1,9 @@
 @import '../utility/variable';
 
 .hamburger {
+  @media ( min-width: 600px ) {
+    display: none;
+  }
   position: relative;
   width: 50px;
   height: 45px;
